<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="setting_demo_preference" android:title="@string/title_setting_demo_preference"
	android:summary="@string/summary_setting_demo_preference">
	
	<PreferenceCategory xmlns:android="http://schemas.android.com/apk/res/android"
		android:key="common_settings" android:title="@string/common_settings">
		
		<CheckBoxPreference android:key="use_shake"
			android:title="@string/title_check_box" android:summary="@string/summary_check_box"
			 />
		<ListPreference android:key="connect_type" android:numeric="integer"
			android:title="@string/title_list_preference" android:summary="@string/summary_list_preference"
			android:entries="@array/connects" android:entryValues="@array/connects_value" android:defaultValue="0"
			android:dialogTitle="@string/dialog_title_list_preference" />
		<Preference android:key="wifi_setting" android:title="网络设置"  
        	android:summary="点击进入系统wifi和蓝牙设置界面">
    	</Preference> 
			
	</PreferenceCategory>
	<PreferenceCategory xmlns:android="http://schemas.android.com/apk/res/android"
		android:key="gravity_settings" android:title="@string/gravity_settings">
		<CheckBoxPreference android:key="enable_gravity"   
            android:title="@string/enable_gravity"  
            />
		<com.whyun.activity.component.SeekBarPreference 
			android:dialogTitle="@string/sensitivity_volume" android:title="@string/sensitivity_volume" 
			android:summary="@string/sensitivity_volume_summary" android:key="sensitivity_volume"
			android:dialogLayout="@layout/seekbar">		    
		</com.whyun.activity.component.SeekBarPreference> 
		
	</PreferenceCategory>

	<PreferenceCategory xmlns:android="http://schemas.android.com/apk/res/android"
		android:key="advanced_settings" android:title="@string/advanced_settings">
		<Preference android:key="remove_ad" android:title="去除广告"  
        	android:summary="去除广告您需要花费50个积分">
    	</Preference> 
    	<Preference android:key="manage_user_key" android:title="自定义按键管理"  
        	android:summary="添加修改自定义按键，每添加一套按键花费10个积分">
    	</Preference> 
	</PreferenceCategory>
	<PreferenceCategory xmlns:android="http://schemas.android.com/apk/res/android"
		android:key="help_settings" android:title="@string/help_settings">
		
		<Preference android:key="help_activity" android:title="帮助向导"  
        	android:summary="点击查看帮助向导">
    	</Preference> 
    	<Preference android:key="app_about" android:title="关于"  
        	android:summary="点击查看关于信息">
    	</Preference> 
	</PreferenceCategory>
</PreferenceScreen>
